@@ -5,6 +5,7 @@ This program is free software: you can redistribute it and/or modify it under th
 This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
 You should have received a copy of the GNU General Public License along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
+#include <locale.h>
 #include <gtk/gtk.h>
 #include "GUI/GTKREPL"
 #include "GUI/GTKView"
@@ -67,6 +68,7 @@ static GtkWindow* make_REPL_window(GtkWindow* parent, const char* source_file_na
 	return(GTK_WINDOW(REPL_get_widget(REPL)));
 }
 int main(int argc, char* argv[]) {
+	setlocale(LC_ALL, "");
 	Allocator_init();
 	if(argc >= 1)
 		REPL_set_shared_dir_by_executable(argv[0]);
